--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/4geeks.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
+
+    <title>Reproductor de Música</title>
   </head>
   <body>
+
     <div id="root"></div>
-    <script type="module" src="/src/js/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
