--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   />
   
-    <title>Reproductor de Música</title>
+    <title></title>
   </head>
   <body>
     <div id="root"></div>
